# AMR

AMR/agv_ws/src/agv_bringup/: CMakeLists.txt  package.xml
AMR/agv_ws/src/agv_bringup/launch/: following_robot.launch.py  image_processing.launch.py  testing_AGV.launch.py  testing_AGV_IMU.launch.py
AMR/agv_ws/src/agv_controller/: CMakeLists.txt  package.xml
AMR/agv_ws/src/agv_controller/agv_controller/: keyboard_controller.py  noisy_controller.py  simple_controller.py  twist_relay.py
AMR/agv_ws/src/agv_controller/config/: agv_controllers.yaml  twist_mux_topics.yaml
AMR/agv_ws/src/agv_controller/launch/: controller.launch.py  controller_v2.launch.py  joystick_teleop.launch.py
AMR/agv_ws/src/agv_controller/src/: simple_controller.cpp
AMR/agv_ws/src/agv_description/: CMakeLists.txt  package.xml
AMR/agv_ws/src/agv_description/config/: joint_names_agv_description.yaml
AMR/agv_ws/src/agv_description/launch/: display.launch  gazebo.launch.py
AMR/agv_ws/src/agv_description/meshes/: Banh_xe_chu_dong_1_Link.STL  Banh_xe_chu_dong_2_Link.STL  Caster_1_Link.STL  Caster_2_Link.STL  Caster_3_Link.STL  Caster_4_Link.STL  base_link.STL  lidar_Link.STL
AMR/agv_ws/src/agv_description/rviz/: urdf_config.rviz
AMR/agv_ws/src/agv_description/urdf/: agv_description.csv  agv_description.urdf.xacro  agv_gazebo.xacro  agv_ros2_control.xacro
AMR/agv_ws/src/agv_firmware/: CMakeLists.txt  agv_interface.xml  package.xml
AMR/agv_ws/src/agv_firmware/agv_firmware/: mpu6050_driver.py
AMR/agv_ws/src/agv_interfaces/: CMakeLists.txt  package.xml
(+7 files in other folders)
